fixed some spacings

--- a/styles.css
+++ b/styles.css
@@ -421,7 +421,7 @@ nav {
   border: 5px solid rgba(173, 222, 253, 1);
   border-radius: 20px;
   padding: 20px 30px;
-  width: 85%;
+  width: 88%;
   max-width: 700px;
   margin: 30px auto;
   background-color: rgba(255, 255, 255, 0.05);
